--- a/web/index.html
+++ b/web/index.html
@@ -59,6 +59,26 @@
             </a>
           </li>
           <li>
+            <a href="#/agents" data-page="agents" class="nav-link">
+              <svg class="icon" viewBox="0 0 24 24">
+                <path
+                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5s-3 1.34-3 3 1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
+                />
+              </svg>
+              Sub-Agents
+            </a>
+          </li>
+          <li>
+            <a href="#/scheduler" data-page="scheduler" class="nav-link">
+              <svg class="icon" viewBox="0 0 24 24">
+                <path
+                  d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
+                />
+              </svg>
+              Scheduler
+            </a>
+          </li>
+          <li>
             <a href="#/memory" data-page="memory" class="nav-link">
               <svg class="icon" viewBox="0 0 24 24">
                 <path
